--- a/maven-kuali-skin/pom.xml
+++ b/maven-kuali-skin/pom.xml
@@ -19,13 +19,14 @@
   under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>28</version>
+    <version>29-SNAPSHOT</version>
   </parent>
 
   <groupId>org.kuali.maven.skins</groupId>
@@ -35,10 +36,5 @@
   <name>Kuali Site Skin</name>
   <description>Kuali Site Skin</description>
 
-  <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</url>
-  </scm>
 </project>
 
