--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -184,7 +184,7 @@
       <extension>
         <groupId>org.kuali.maven.wagons</groupId>
         <artifactId>maven-s3-wagon</artifactId>
-        <version>1.1.2</version>
+        <version>1.1.3-SNAPSHOT</version>
       </extension>
     </extensions>
     <pluginManagement>
