git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@3183 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -201,7 +201,7 @@
           <artifactId>maven-cloudfront-plugin</artifactId>
           <version>1.1.1-SNAPSHOT</version>
           <configuration>
-            <organizationGroupId>${kuali.organization.group.id}</organizationGroupId>
+            <organizationGroupId>${kuali.groupId}</organizationGroupId>
             <forceMojoExecution>true</forceMojoExecution>
             <bucket>${kuali.site.bucket}</bucket>
             <serverId>${kuali.site.server.id}</serverId>
