--- a/common/pom.xml
+++ b/common/pom.xml
@@ -23,7 +23,7 @@
     <artifactId>kuali</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <groupId>org.kuali</groupId>
+  <groupId>org.kuali.pom</groupId>
   <artifactId>kuali-common</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
