git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3191 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -159,7 +159,7 @@
         <jenkins.groupId>org.jenkins</jenkins.groupId>
         <jenkins.artifactId>jenkins</jenkins.artifactId>
         <jenkins.artifactId>1.440</jenkins.artifactId>
-        <ant.phase>process-resources</ant.phase>
+        <ant.phase>none</ant.phase>
         <ant.target>installjenkins</ant.target>
       </properties>
       <build>
