git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3192 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -158,7 +158,7 @@
       <properties>
         <jenkins.groupId>org.jenkins</jenkins.groupId>
         <jenkins.artifactId>jenkins</jenkins.artifactId>
-        <jenkins.artifactId>1.440</jenkins.artifactId>
+        <jenkins.version>1.440</jenkins.version>
         <ant.phase>none</ant.phase>
         <ant.target>installjenkins</ant.target>
       </properties>
