--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -159,6 +159,7 @@
         <jenkins.groupId>org.jenkins</jenkins.groupId>
         <jenkins.artifactId>jenkins</jenkins.artifactId>
         <jenkins.version>1.440</jenkins.version>
+        <jenkins.war>target/dependency/${jenkins.artifactId}-${jenkins.version}</jenkins.war>
         <ant.phase>none</ant.phase>
         <ant.target>installjenkins</ant.target>
       </properties>
