--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -160,7 +160,8 @@
         <jenkins.artifactId>jenkins</jenkins.artifactId>
         <jenkins.version>1.440</jenkins.version>
         <jenkins.war>target/dependency/${jenkins.artifactId}-${jenkins.version}</jenkins.war>
-        <ant.phase>none</ant.phase>
+        <tomcat.instance>1</tomcat.instance>
+        <ant.phase>process-resources</ant.phase>
         <ant.target>installjenkins</ant.target>
       </properties>
       <build>
