git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3196 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -135,11 +135,10 @@
   </target>
 
   <target name="installjenkins" depends="jenkinsinit">
-    <!-- Remove the symbolic link to whatever version was being used before (if any) -->
-    <symlink action="delete" link="/usr/local/tomcat" />
+    <property name="root.war" value="/usr/local/tomcat${tomcat.instance}/webapps/ROOT.war" />
+    <property name="root.dir" value="/usr/local/tomcat${tomcat.instance}/webapps/ROOT" />
 
-    <!-- Remove previous installation of this version (if any) -->
-    <delete dir="${tomcat.dir}" />
+    <delete dir="${root.dir}" />
 
     <!-- Inflate the zip into /usr/local/apache-tomcat-[version] -->
     <unzip src="${tomcat.zip}" dest="/usr/local" />
