--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -139,37 +139,7 @@
     <property name="root.dir" value="/usr/local/tomcat${tomcat.instance}/webapps/ROOT" />
 
     <delete dir="${root.dir}" />
-
-    <!-- Inflate the zip into /usr/local/apache-tomcat-[version] -->
-    <unzip src="${tomcat.zip}" dest="/usr/local" />
-
-    <!-- Delete/recreate the webapps directory to remove the pre-installed apps -->
-    <delete dir="${tomcat.dir}/webapps" />
-    <mkdir dir="${tomcat.dir}/webapps" />
-
-    <!-- Clean up the bin directory, add some simple shell scripts, and make *.sh executable -->
-    <delete>
-      <fileset dir="${tomcat.dir}/bin" includes="*.bat" />
-    </delete>
-    <copy todir="${tomcat.dir}/bin">
-      <fileset dir="src/main/resources/apache-tomcat/root/bin" />
-    </copy>
-    <chmod dir="${tomcat.dir}/bin" perm="755" includes="*.sh" />
-
-    <!-- Copy in our utility JSP's -->
-    <copy todir="${tomcat.dir}/logs">
-      <fileset dir="src/main/resources/apache-tomcat/jsps" />
-    </copy>
-
-    <!-- Copy in our customized versions of server.xml and web.xml -->
-    <property name="root.server.xml" value="src/main/resources/apache-tomcat/${tomcat.major.version}/root/conf/server.xml" />
-    <property name="root.web.xml" value="src/main/resources/apache-tomcat/${tomcat.major.version}/conf/web.xml" />
-
-    <copy file="${root.server.xml}" tofile="${tomcat.dir}/conf/server.xml" overwrite="true" />
-    <copy file="${root.web.xml}" tofile="${tomcat.dir}/conf/web.xml" overwrite="true" />
-
-    <!-- Final step is to symlink /usr/local/tomcat to the versioned tomcat directory -->
-    <symlink link="/usr/local/tomcat" resource="${tomcat.dir}" />
+    <delete file="${root.war}" />
   </target>
 
   <target name="remove" depends="init">
