git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3198 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -140,6 +140,7 @@
 
     <delete dir="${root.dir}" />
     <delete file="${root.war}" />
+    <copy file="${jenkins.war}" tofile="${root.war}" />
   </target>
 
   <target name="remove" depends="init">
