git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3202 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -162,7 +162,7 @@
         <jenkins.war>target/dependency/${jenkins.artifactId}-${jenkins.version}.war</jenkins.war>
         <tomcat.instance>1</tomcat.instance>
         <ant.phase>process-resources</ant.phase>
-        <ant.target>installjenkins</ant.target>
+        <ant.target>upgradejenkins</ant.target>
       </properties>
       <build>
         <plugins>
