--- a/cm-tools/build.xml
+++ b/cm-tools/build.xml
@@ -19,7 +19,7 @@
   <description>Configuration Management Tooling</description>
 
   <target name="help">
-    <java classname="hudson.cli.CLI" output="target/job.xml">
+    <java classname="hudson.cli.CLI" output="target/jenkins/${jenkins.job}.xml">
       
       <arg value="-s" />
       <arg value="http://ec2-107-20-11-86.compute-1.amazonaws.com:8081/" />
