git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3215 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/build.xml
+++ b/cm-tools/build.xml
@@ -23,7 +23,7 @@
       <arg value="-s" />
       <arg value="${jenkins.url}" />
       <arg value="create-job" />
-      <arg value="${jenkins.job}" />
+      <arg value="${jenkins.job.name}" />
     </java>
   </target>
 
