--- a/cm-tools/build.xml
+++ b/cm-tools/build.xml
@@ -28,12 +28,11 @@
   </target>
 
   <target name="get">
-    <echo>${maven.plugin.classpath}</echo>
     <java classname="hudson.cli.CLI" output="target/job.xml" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}">
       <arg value="-s" />
       <arg value="${jenkins.url}" />
       <arg value="get-job" />
-      <arg value="kuali-publish" />
+      <arg value="${jenkins.job.name}" />
     </java>
   </target>
 
