--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -35,6 +35,7 @@
     <jenkins.job.name>${jenkins.project.artifactId}-publish</jenkins.job.name>
     <jenkins.job.file>target/classes/org/kuali/cm/jenkins/publish.xml</jenkins.job.file>
     <jenkins.url>http://ec2-107-20-11-86.compute-1.amazonaws.com:8081/</jenkins.url>
+    <jenkins.cli.classname>hudson.cli.CLI</jenkins.cli.classname>
   </properties>
   <scm>
     <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/cm-tools</connection>
