git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3222 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/build.xml
+++ b/cm-tools/build.xml
@@ -26,6 +26,14 @@
     </java>
   </target>
 
+  <target name="build">
+    <java classname="${jenkins.cli.classname}" input="${jenkins.job.file}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}">
+      <arg value="-s ${jenkins.url}" />
+      <arg value="build" />
+      <arg value="${jenkins.job.name}" />
+    </java>
+  </target>
+
   <target name="get">
     <java classname="${jenkins.cli.classname}" output="target/job.xml" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}">
       <arg value="-s ${jenkins.url}" />
