git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3223 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/build.xml
+++ b/cm-tools/build.xml
@@ -20,7 +20,8 @@
 
   <target name="create">
     <java classname="${jenkins.cli.classname}" input="${jenkins.job.file}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}">
-      <arg value="-s ${jenkins.url}" />
+      <arg value="-s" />
+      <arg value="${jenkins.url}" />
       <arg value="create-job" />
       <arg value="${jenkins.job.name}" />
     </java>
@@ -28,7 +29,8 @@
 
   <target name="build">
     <java classname="${jenkins.cli.classname}" input="${jenkins.job.file}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}">
-      <arg value="-s ${jenkins.url}" />
+      <arg value="-s" />
+      <arg value="${jenkins.url}" />
       <arg value="build" />
       <arg value="${jenkins.job.name}" />
     </java>
@@ -36,7 +38,8 @@
 
   <target name="get">
     <java classname="${jenkins.cli.classname}" output="target/job.xml" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}">
-      <arg value="-s ${jenkins.url}" />
+      <arg value="-s" />
+      <arg value="${jenkins.url}" />
       <arg value="get-job" />
       <arg value="${jenkins.job.name}" />
     </java>
@@ -44,7 +47,8 @@
 
   <target name="help">
     <java classname="${jenkins.cli.classname}">
-      <arg value="-s ${jenkins.url}" />
+      <arg value="-s" />
+      <arg value="${jenkins.url}" />
       <arg value="help" />
     </java>
   </target>
