git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3224 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/build.xml
+++ b/cm-tools/build.xml
@@ -33,6 +33,8 @@
       <arg value="${jenkins.url}" />
       <arg value="build" />
       <arg value="${jenkins.job.name}" />
+      <arg value="${jenkins.wait}" />
+      <arg value="${jenkins.changes}" />
     </java>
   </target>
 
