--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -28,9 +28,9 @@
     <ant.file>build.xml</ant.file>
     <ant.java.fork>true</ant.java.fork>
     <foundation.repo>http://svn.kuali.org/repos/foundation</foundation.repo>
-    <jenkins.project.svn.location>${foundation.repo}/pom/trunk/parent</jenkins.project.svn.location>
-    <jenkins.project.groupId>org.kuali.pom</jenkins.project.groupId>
-    <jenkins.project.artifactId>kuali</jenkins.project.artifactId>
+    <jenkins.project.svn.location>${foundation.repo}/trunk/kuali-threads</jenkins.project.svn.location>
+    <jenkins.project.groupId>org.kuali.common.threads</jenkins.project.groupId>
+    <jenkins.project.artifactId>kuali-threads</jenkins.project.artifactId>
     <jenkins.mvn.goals>clean install</jenkins.mvn.goals>
     <jenkins.job.name>${jenkins.project.artifactId}-publish</jenkins.job.name>
     <jenkins.job.file>target/classes/org/kuali/cm/jenkins/publish.xml</jenkins.job.file>
